# multilang_site

./: README.md  pyproject.toml  render.yaml  requirements.txt
main/: assistant_utils.py
main/consumers/: assistant_consumer.py
main/locale/fr_FR/LC_MESSAGES/: django.mo  django.po
main/management/commands/: commands_exceptions.py  seed_data.py
main/migrations/: 0001_initital.py  0002_article_gpt_vectors_index.py
main/static/: articles.css  assistant.css
main/templates/main/: open_assistant.html  setlang_form.html
main/templates/main/articles/: article.html  reached_end.html
main/templates/main/assistant/: interface.html
main/views/: article_views.py
multilang_site/: asgi.py  db.sqlite3  settings.py
multilang_site/main/: assistant.py  assistant_utils.py  gpt_client.py  models.py  routing.py  tests.py  translation.py  views.py
multilang_site/main/locale/fr_FR/LC_MESSAGES/: django.mo  django.po
multilang_site/main/management/commands/: seed_data.py
multilang_site/main/migrations/: 0001_initial.py  0002_alter_article_options_article_content_af_and_more.py  0003_remove_article_content_af_remove_article_content_ar_and_more.py  0003_remove_article_gpt_vectors_index_and_more.py
multilang_site/main/static/: articles.css  assistant.css  collapse_assistant.js  styles.css
multilang_site/main/templates/main/: base_layout.html  open_assistant.html  search_form.html  setlang_form.html
multilang_site/main/templates/main/articles/: article.html  article_card.html  articles.html  header.html  reached_end.html  read_button.html
multilang_site/main/templates/main/assistant/: assistant.html  interface.html  message.html  messages.html
multilang_site/main/views/: article_views.py  assistant_views.py
multilang_site/multilang_site/: asgi.py  settings.py  urls.py
(+2 files in other folders)
