[tool.poetry]
name = "multilang-site"
version = "0.1.0"
description = "Online publishing platform with multiple languages support and I.A features"
authors = ["LouisCoutel <louiscoutel75@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django-htmx = "^1.17.3"
Django = "^5.0.6"
django-template-partials = "^24.2"
faker = "^25.8.0"
django-modeltranslation = "^0.19.3"
python-dotenv = "^1.0.1"
openai = "^1.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
